--- a/readme
+++ b/readme
@@ -1,3 +1,7 @@
+utopia 乌托邦
+是针对豆瓣爬取出来的电影,书籍（可能会有音乐）相关的仿照豆瓣实现的相关的web应用，主要其中增加了一些相关的自己想要学习的redis,dubbo,lucene等所有框架
+
+
 1、测试 redis 服务
 
 2、测试 dubbo 服务
